PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>견적 마스터 오브젝트</description>
    <label>견적</label>
    <nameField>
        <displayFormat>DNT-{YYYY}{MM}-{000}</displayFormat>
        <label>문서 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>