PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuoteApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>