PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuoteApprover3</relationshipName>
    <type>Lookup</type>
</CustomField>