PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Account__c.field-meta.xml
<CustomField>
    <fullName>Quote_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>기회의 고객과 견적대상인 실고객이 다른경우
견적을 수신하는 실제 고객을 입력</description>
    <inlineHelpText>기회의 고객과 견적 수신 고객이 다른 경우에만 입력하세요.</inlineHelpText>
    <label>고객</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>견적</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>