PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_CarbonCopy__c.field-meta.xml
<CustomField>
    <fullName>Quote_CarbonCopy__c</fullName>
    <formula>IF(ISBLANK(Quote_Contact__r.LastName),&apos;&apos;,Quote_Contact__r.LastName  &amp; &quot; &quot; &amp; Quote_Contact__r.Title &amp; &apos;님&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>참조</label>
    <type>Text</type>
</CustomField>