PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultAmount__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultAmount__c</fullName>
    <formula>Quote_ConsultSubTotal__c -  Quote_SalesDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>단위:원, VAT 별도</inlineHelpText>
    <label>견적금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>