PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultCount__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultCount__c</fullName>
    <description>&quot;Count(), Only records meeting certain criteria should be included in the calculation.
RecordType = Consult&quot;</description>
    <label>컨설팅 자원 수</label>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>컨설팅</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>