PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultDiscountRate__c</fullName>
    <formula>( Quote_ConsultListSubTotal__c - Quote_ConsultAmount__c ) / Quote_ConsultListSubTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율(컨설팅)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>