PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultListSubTotal__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultListSubTotal__c</fullName>
    <label>소계(표준단가)</label>
    <summarizedField>QuoteItem__c.QuoteItem_ConsultListAmount__c</summarizedField>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>