PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultRemark__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultRemark__c</fullName>
    <defaultValue>&quot;- 유효기간 : 견적일 기준 1주일입니다.&quot; &amp;  BR()  &amp;
&quot;- 결제조건 : 현금 결제 조건입니다.&quot; &amp;  BR()  &amp;
&quot;- 투입기간은 고객과 협의하에 변경될 수 있습니다.&quot;</defaultValue>
    <description>Default Value : &quot;- 유효기간 : 견적일 기준 4주일입니다.&quot; &amp; &quot;\r\n&quot; &amp;
&quot;- 결제조건 : 현금 결제 조건입니다.&quot; &amp; &quot;\r\n&quot; &amp;
&quot;- 업무범위의 변경에 따라 협의에 의해 투입기간이 변경 될 수 있습니다.&quot; &amp; &quot;\r\n&quot;</description>
    <label>비고(컨설팅)</label>
    <type>TextArea</type>
</CustomField>