PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultSubTotal__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultSubTotal__c</fullName>
    <inlineHelpText>단위:원, VAT 별도</inlineHelpText>
    <label>소계(컨설팅)</label>
    <summarizedField>QuoteItem__c.QuoteItem_ConsultAmount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>컨설팅</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>