PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultTotalAmount__c</fullName>
    <formula>Quote_ConsultAmount__c * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>견적금액(VAT포함)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>