PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ConsultVAT__c.field-meta.xml
<CustomField>
    <fullName>Quote_ConsultVAT__c</fullName>
    <formula>Quote_ConsultAmount__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>