PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>견적을 수신하는 고객 담당자</description>
    <label>고객담당자</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>견적</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>