PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Customer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Customer__c</fullName>
    <formula>BLANKVALUE(Quote_Account__r.Name, Quote_Opportunity__r.AccountId__r.Name) &amp; &apos; 귀중&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수신</label>
    <type>Text</type>
</CustomField>