PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Default Value : Today()
견적일은 당일 원칙으로 하나 전일 또는 익일에 작성 발송하는 경우를 위해 입력 가능토록 함</description>
    <label>견적일</label>
    <type>Date</type>
</CustomField>