PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_HasMMSchedule__c.field-meta.xml
<CustomField>
    <fullName>Quote_HasMMSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M/M Schedule</label>
    <type>Checkbox</type>
</CustomField>