PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_InChargeSales__c.field-meta.xml
<CustomField>
    <fullName>Quote_InChargeSales__c</fullName>
    <formula>IF( Quote_Opportunity__r.Sales_In_Charge__r.IsActive ,
Quote_Opportunity__r.Sales_In_Charge__r.LastName   &amp; &apos;(&apos; &amp; Quote_Opportunity__r.Sales_In_Charge__r.MobilePhone &amp; &apos;)&apos;,
$User.LastName    &amp; &apos;(&apos; &amp;  $User.MobilePhone  &amp; &apos;)&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>견적문의</label>
    <type>Text</type>
</CustomField>