PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_LicenseCount__c.field-meta.xml
<CustomField>
    <fullName>Quote_LicenseCount__c</fullName>
    <description>&quot;Count(), Only records meeting certain criteria should be included in the calculation.
RecordType = License&quot;</description>
    <label>라이센스 타입 수</label>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>라이센스</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>