PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_LicenseDiscount__c.field-meta.xml
<CustomField>
    <fullName>Quote_LicenseDiscount__c</fullName>
    <description>Sum() QuoteItem_LicenseDiscountAmount__c RecordType = License</description>
    <inlineHelpText>단위: USD, VAT 별도</inlineHelpText>
    <label>할인(라이센스)</label>
    <summarizedField>QuoteItem__c.QuoteItem_LicenseDiscountAmount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>라이센스</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>