PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_LicenseDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>Quote_LicenseDiscountRate__c</fullName>
    <formula>(  Quote_LicenseListAmount__c  -  Quote_LicenseSubTotal__c  ) / Quote_LicenseListAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율(라이센스)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>