PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_LicenseListAmount__c.field-meta.xml
<CustomField>
    <fullName>Quote_LicenseListAmount__c</fullName>
    <label>소계(표준사용료)</label>
    <summarizedField>QuoteItem__c.QuoteItem_LicenseListAmount__c</summarizedField>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>