PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_LicenseSubTotal__c.field-meta.xml
<CustomField>
    <fullName>Quote_LicenseSubTotal__c</fullName>
    <inlineHelpText>단위:USD, VAT 별도</inlineHelpText>
    <label>소계(라이센스)</label>
    <summarizedField>QuoteItem__c.QuoteItem_LicenseAmount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>라이센스</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>