PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_NumberOfUsers__c.field-meta.xml
<CustomField>
    <fullName>Quote_NumberOfUsers__c</fullName>
    <label>소계(사용자)</label>
    <summarizedField>QuoteItem__c.QuoteItem_LicenseNumberOfUser__c</summarizedField>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>