PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업기회</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>견적</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>