PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_PremeierSuccessPlan__c.field-meta.xml
<CustomField>
    <fullName>Quote_PremeierSuccessPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premeier Success Plan</label>
    <type>Checkbox</type>
</CustomField>