PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_SalesDiscount__c.field-meta.xml
<CustomField>
    <fullName>Quote_SalesDiscount__c</fullName>
    <inlineHelpText>개별단가가 아닌 계약가를 할인할 경우 입력하세요.
양수로 입력하세요.
단위:원, VAT 별도</inlineHelpText>
    <label>할인(총액)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>