PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_ShowVAT__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShowVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>견적서에 VAT 포함 금액을 표시 할 경우 체크하세요.</inlineHelpText>
    <label>VAT 별도 표시</label>
    <type>Checkbox</type>
</CustomField>