PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Subject__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subject__c</fullName>
    <description>&apos;[&apos; &amp; Quote_Opportunity__r.Account_Name__r.Name &amp; &apos;]&apos; &amp; 
&apos; - &apos; &amp; Quote_Opportunity__r.Engagement_Description__c
를 Workflow에 설정</description>
    <inlineHelpText>입력하지 않는 경우 저장시
[기회명] + 기회 Engagement Description
으로 자동 설정됩니다.</inlineHelpText>
    <label>견적명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>