PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>Quote_TotalDiscount__c</fullName>
    <formula>Quote_SalesDiscount__c+
Quote_ConsultDiscount__c+Quote_TrainDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>단위:원, VAT 별도</inlineHelpText>
    <label>할인(합계)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>