PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TotalManMonths__c.field-meta.xml
<CustomField>
    <fullName>Quote_TotalManMonths__c</fullName>
    <description>Sum() QuoteItem_ManMonths__c RecordType = Consult</description>
    <label>소계(투입공수)</label>
    <summarizedField>QuoteItem__c.QuoteItem_ConsultManMonths__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>컨설팅</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>