PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TrainDiscount__c.field-meta.xml
<CustomField>
    <fullName>Quote_TrainDiscount__c</fullName>
    <label>할인(교육)</label>
    <summarizedField>QuoteItem__c.QuoteItem_TrainingDiscountAmount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>교육</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>