PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TrainingCount__c.field-meta.xml
<CustomField>
    <fullName>Quote_TrainingCount__c</fullName>
    <label>소계(수강인원)</label>
    <summarizedField>QuoteItem__c.QuoteItem_TrainingCount__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>교육</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>