PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TrainingDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>Quote_TrainingDiscountRate__c</fullName>
    <formula>( Quote_TrainingListAmount__c  - Quote_TrainingSubTotal__c) / Quote_TrainingListAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>할인율(교육)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>