PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TrainingListAmount__c.field-meta.xml
<CustomField>
    <fullName>Quote_TrainingListAmount__c</fullName>
    <label>소계 (표준금액)</label>
    <summarizedField>QuoteItem__c.QuoteItem_TrainingListAmount__c</summarizedField>
    <summaryForeignKey>QuoteItem__c.QuoteItem_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>