PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_TrainingRemark__c.field-meta.xml
<CustomField>
    <fullName>Quote_TrainingRemark__c</fullName>
    <label>비고(교육)</label>
    <type>TextArea</type>
</CustomField>