PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>IF(Quote_ConsultCount__c&gt;0 &amp;&amp; Quote_LicenseCount__c &gt; 0, &apos;Both&apos;,
 IF(Quote_ConsultCount__c&gt;0 , &apos;Consult&apos; , IF(Quote_LicenseCount__c&gt;0, &apos;License&apos;,IF(Quote_TrainingSubTotal__c&gt;0, &apos;Training&apos;,&apos;None&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>견적 종류</label>
    <type>Text</type>
</CustomField>