PA_Education/TestMenifest/force-app/main/default/objects/Quote__c/fields/X1st_Discount__c.field-meta.xml
<CustomField>
    <fullName>X1st_Discount__c</fullName>
    <label>1st Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>